--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
     "deploy": "gh-pages -d out"
   },
   "dependencies": {
+    "@next/font": "^14.2.15",
     "@tailwindcss/postcss": "^4.0.3",
     "next": "15.1.6",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-icons": "^5.4.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
